Hope This Works, added images to each device, added new page that allows user to create new device (doesn't send to server yet)

--- a/LinkedViewProject/app/src/main/res/layout/get_all_devices_list_view_cell.xml
+++ b/LinkedViewProject/app/src/main/res/layout/get_all_devices_list_view_cell.xml
@@ -38,6 +38,10 @@
             android:id="@+id/type"
             android:layout_weight="1" />
     </LinearLayout>
-
-
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/device_type"
+        android:src="@mipmap/ic_launcher"
+        />
 </LinearLayout>
