--- a/LinkedViewProject/app/src/main/res/layout/activity_main.xml
+++ b/LinkedViewProject/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,24 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/image_button_new"
+        android:src="@mipmap/ic_add_black_24dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/GetAllDevicesListView"
+        android:layout_below="@+id/image_button_new"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="52dp" />
+
+
 </RelativeLayout>
