--- a/LinkedViewProject/app/src/main/res/layout/activity_device_details.xml
+++ b/LinkedViewProject/app/src/main/res/layout/activity_device_details.xml
@@ -212,9 +212,9 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
+            android:text="Submit"
             android:id="@+id/submit_button"
-            android:layout_column="2" />
+            android:layout_column="0" />
     </TableRow>
 
 </TableLayout>
