added the ablility to call the get state, working on a set state now

--- a/LinkedViewProject/app/src/main/res/layout-v14/get_all_devices_list_view_cell.xml
+++ b/LinkedViewProject/app/src/main/res/layout-v14/get_all_devices_list_view_cell.xml
@@ -40,10 +40,12 @@
             android:layout_weight="1" />
     </LinearLayout>
 
-    <Switch
+    <ToggleButton
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:text=""
-        android:id="@+id/switch1"
-        android:layout_gravity="center_vertical" />
+        android:layout_height="wrap_content"
+        android:text="New ToggleButton"
+        android:id="@+id/toggleButton"
+        android:layout_gravity="center_vertical"
+        android:checked="false" />
+
 </LinearLayout>
