Added UI and linked it all together so that currently a user can view all of the devices and their set state

--- a/IntegratedHomeSystem/app/src/main/res/values/colors.xml
+++ b/IntegratedHomeSystem/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#87BCDE</color>
     <color name="colorPrimaryDark">#243B4A</color>
-    <color name="colorAccent">#805E73</color>
+    <color name="colorAccent">#a6071d</color>
 </resources>
