--- a/IntegratedHomeSystem/app/src/main/res/layout/content_main.xml
+++ b/IntegratedHomeSystem/app/src/main/res/layout/content_main.xml
@@ -5,16 +5,19 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:paddingTop="0dp"
+        android:paddingBottom="0dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_main"
-        tools:context="integratedhome.tom.mmu.integratedhomesystem.MainActivity">
-
-    <TextView
-            android:text="Hello World!"
+        tools:context="integratedhome.tom.mmu.integratedhomesystem.MainActivity" android:longClickable="true">
+    <ListView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/lv_devices"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"/>
+
 </RelativeLayout>
